--- a/view/static/fontweb/metadata/icons.yml
+++ b/view/static/fontweb/metadata/icons.yml
@@ -12,7 +12,7 @@
 accessible-icon:
   changes:
     - 5.0.0
-  label: Accessible Icon
+  label: Accessible icon
   search:
     terms:
       - accessibility
@@ -10127,7 +10127,7 @@ icicles:
 icons:
   changes:
     - 5.9.0
-  label: Icons
+  label: icon
   search:
     terms:
       - bolt
